🚀 Add comprehensive production deployment setup
✨ Features Added:
- Production-ready Docker Compose configuration with PostgreSQL
- Enhanced Dockerfile with multi-stage build and security improvements
- Redis caching layer for performance
- Automated backup system with retention policy
- Production environment configuration template
- Automated deployment script with health checks

🔧 Production Setup:
- docker-compose.yml: PostgreSQL, Redis, automated backups, health checks
- Dockerfile.backend: Multi-stage build, non-root user, signal handling
- env.production.example: Complete environment configuration template
- scripts/production-deploy.sh: Automated deployment with validation
- scripts/backup.sh: PostgreSQL backup with compression and retention
- PRODUCTION_DEPLOYMENT.md: Comprehensive deployment guide

📊 Derby Migration Support:
- Enhanced existing migration script (scripts/derby-migration.js)
- CSV, JSON, and SQL import options
- Data transformation and validation
- Detailed migration instructions in deployment guide

🔒 Security & Performance:
- Resource limits and health checks for all services
- Non-root container execution
- Proper signal handling with dumb-init
- Network isolation and backup encryption
- Comprehensive monitoring and logging setup

📚 Documentation:
- Updated README.md with production deployment section
- Complete Apache Derby migration instructions
- Troubleshooting guide and maintenance procedures
- Security checklist and best practices

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,4 +1,31 @@
-FROM node:18-alpine
+# Multi-stage build for production optimization
+FROM node:18-alpine AS dependencies
+
+# Set working directory
+WORKDIR /app
+
+# Install dumb-init for proper signal handling
+RUN apk add --no-cache dumb-init
+
+# Copy package files
+COPY package*.json ./
+
+# Install all dependencies (including dev dependencies for building)
+RUN npm ci --include=dev && npm cache clean --force
+
+# Production stage
+FROM node:18-alpine AS production
+
+# Install necessary packages for health checks and PostgreSQL
+RUN apk add --no-cache \
+    curl \
+    postgresql-client \
+    dumb-init \
+    && rm -rf /var/cache/apk/*
+
+# Create non-root user for security
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nodejs -u 1001
 
 # Set working directory
 WORKDIR /app
@@ -6,21 +33,31 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci --only=production
+# Install only production dependencies
+RUN npm ci --only=production && npm cache clean --force
 
 # Copy source code
-COPY . .
+COPY --chown=nodejs:nodejs . .
 
-# Create uploads directory
-RUN mkdir -p uploads
+# Copy dependencies from build stage
+COPY --from=dependencies --chown=nodejs:nodejs /app/node_modules ./node_modules
+
+# Create necessary directories with proper permissions
+RUN mkdir -p uploads logs && \
+    chown -R nodejs:nodejs /app
+
+# Switch to non-root user
+USER nodejs
 
 # Expose port
 EXPOSE 3001
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+# Health check with better error handling
+HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
   CMD curl -f http://localhost:3001/api/health || exit 1
+
+# Use dumb-init to handle signals properly
+ENTRYPOINT ["dumb-init", "--"]
 
 # Start the application
 CMD ["npm", "start"] 
