🎉 Complete application overhaul with modern UI and fresh installation
✨ Major improvements:
- Enhanced Top Authors section with modern card design
- Fixed all backend API issues (authors, stats, wishlist)
- Improved reading progress and analytics
- Dynamic author management from book data
- Modern responsive UI with gradients and animations

🧹 Cleanup for fresh installation:
- Removed all migration data and scripts
- Updated README for clean installation process
- Removed Derby migration documentation
- Streamlined project structure

🚀 Ready for production deployment with Docker

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@ npm-debug.log*
 database.sqlite
 *.db
 
+# Persistent Data (Docker volumes)
+data/
+uploads/
+backups/
+
 # Build outputs
 frontend/build/
 dist/
