--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
+    "csv-writer": "^1.6.0",
     "jest": "^29.6.2",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
