--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,16 +1,17 @@
 {
   "short_name": "Modern Library",
-  "name": "Modern Library Management System",
+  "name": "Modern Library - Manage Your Books",
   "icons": [
     {
       "src": "favicon.svg",
+      "sizes": "any",
       "type": "image/svg+xml",
-      "sizes": "any"
+      "purpose": "any maskable"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#4F46E5",
-  "background_color": "#ffffff",
-  "description": "A modern web application for managing your personal book collection"
+  "theme_color": "#8B5CF6",
+  "background_color": "#FFFFFF",
+  "description": "Modern Library Management System - Manage your personal book collection with ease"
 } 
